Revision history for List-Lazy

{{$NEXT}}
  [ API CHANGES ]

  [ BUG FIXES ]
  - Sub prototypes were declared before the signatures (not good).
    Bumped minimal Perl to 5.22. [GH#1]

  [ DOCUMENTATION ]

  [ ENHANCEMENTS ]

  [ NEW FEATURES ]

  [ STATISTICS ]

0.1.0 2016-11-25
  [ ENHANCEMENTS ]
    - new method 'spy' added.
    - $::a and $::b are now '$a' and '$b'.

  [ STATISTICS ]
    - code churn: 5 files changed, 66 insertions(+), 7 deletions(-)

0.0.1 2016-11-25
  - First version, unleashed on an unsuspecting world.

  [ STATISTICS ]
    - code churn: 2 files changed, 25 insertions(+), 1 deletion(-)